added state base class and ingame state

--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="States\InGame.cs" />
+    <Compile Include="States\StateBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
