--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Particle.cs" />
     <Compile Include="Data\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
