--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Data\Particle.cs" />
     <Compile Include="Data\Player.cs" />
     <Compile Include="Data\Powerup.cs" />
+    <Compile Include="Data\Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
