--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="States\InGame.cs" />
+    <Compile Include="States\MenuState.cs" />
     <Compile Include="States\StateBase.cs" />
   </ItemGroup>
   <ItemGroup>
