--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="States\AboutState.cs" />
     <Compile Include="States\InGame.cs" />
     <Compile Include="States\InstructState.cs" />
     <Compile Include="States\MenuState.cs" />
