added tileset definition to level, added 3rd party tileset support

--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -123,6 +123,9 @@
     <Compile Include="States\StateBase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="dat\tilesets\grassy_tileset.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
     <Content Include="NOTES.txt" />
