--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -174,6 +174,7 @@
     <None Include="dat\level.dat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="dat\lvl4.level" />
     <None Include="dat\vertical_test.level">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
