added win screen, fixed bug in far_spawn level

--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -121,6 +121,7 @@
     <Compile Include="States\InstructState.cs" />
     <Compile Include="States\MenuState.cs" />
     <Compile Include="States\StateBase.cs" />
+    <Compile Include="States\WinState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="dat\tilesets\grassy_tileset.png">
