--- a/ld24/ld24/EvoBlob.csproj
+++ b/ld24/ld24/EvoBlob.csproj
@@ -178,6 +178,9 @@
     <None Include="dat\level.dat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="dat\tri.level">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="dat\vertical_test.level">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
